# warp

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_STATUS.md  Makefile  README.md  TODO.md  clippy.toml  deny.toml
.ai/progress/: portal_tracker.md
.cargo/: config.toml
.gitea/workflows/: benchmarks.yml  ci.yml  security.yml
.github/workflows/: benchmarks.yml  ci.yml  security.yml
crates/boringtun-warp/: Cargo.toml
crates/boringtun-warp/src/: lib.rs
crates/boringtun-warp/src/noise/: crypto.rs  errors.rs  handshake.rs  mod.rs  session.rs
crates/portal-core/src/: access.rs  encryption.rs  lib.rs
crates/portal-hub/src/: ephemeral_auth.rs  lib.rs  persistence.rs  replication.rs  routes.rs  server.rs  storage.rs
crates/portal-net/: Cargo.toml
crates/portal-net/src/: discovery.rs  lib.rs  manager.rs  peer.rs  types.rs
crates/warp-api/: Cargo.toml
crates/warp-api/src/: lib.rs  routes.rs  server.rs
crates/warp-block/: Cargo.toml
crates/warp-block/src/: config.rs  error.rs  extent.rs  lib.rs  server.rs  snapshot.rs  thin.rs  volume.rs
crates/warp-block/src/nbd/: connection.rs  mod.rs
crates/warp-block/src/nvmeof/: connection.rs  target.rs
crates/warp-block/src/nvmeof/transport/: mod.rs  tcp.rs
crates/warp-block/tests/: nvmeof_integration.rs
crates/warp-chonkers/: Cargo.toml
crates/warp-chonkers/src/: chunk.rs  config.rs  error.rs  layer.rs  lib.rs  simd.rs
crates/warp-chonkers/src/dedup/: gc.rs  mod.rs  registry.rs
crates/warp-chonkers/src/phases/: balancing.rs  caterpillar.rs  diffbit.rs  mod.rs
crates/warp-chonkers/src/tree/: mod.rs  node.rs  persist.rs
crates/warp-chonkers/src/version/: delta.rs  mod.rs  timeline.rs
crates/warp-cli/: Cargo.toml
crates/warp-cli/src/: lib.rs  main.rs
crates/warp-cli/src/commands/: bench.rs  info.rs  mod.rs  send.rs  storage.rs  stream.rs
crates/warp-compress/examples/: entropy_bench.rs
crates/warp-core/: Cargo.toml
crates/warp-core/examples/: archive_roundtrip.rs  basic_chunking.rs  compress_encrypt.rs  full_pipeline.rs  parallel_hashing.rs
crates/warp-core/src/: analyzer.rs  engine.rs  lib.rs  pipeline.rs  scheduler.rs  session.rs
crates/warp-ec/: Cargo.toml
crates/warp-ec/benches/: erasure.rs
crates/warp-ec/src/: encoder.rs  lib.rs
crates/warp-format/: Cargo.toml
crates/warp-format/src/: header.rs  index.rs  lib.rs  merkle.rs  reader.rs
crates/warp-format/tests/: archive.rs  integration.rs  stress.rs  transfer.rs
crates/warp-gateway-common/: Cargo.toml
crates/warp-gateway-common/src/: acl.rs  delegation.rs  error.rs  filehandle.rs  lease.rs  lib.rs  lock.rs  session.rs
crates/warp-gpu/: Cargo.toml
crates/warp-gpu/benches/: memory.rs
crates/warp-gpu/src/: backend.rs  blake3_metal.rs  chacha20.rs  chacha20_metal.rs  context.rs  error.rs  lib.rs  memory.rs  stream.rs  traits.rs
crates/warp-gpu/src/backends/: cuda.rs  metal.rs  mod.rs
crates/warp-hash/: Cargo.toml
crates/warp-hash/src/: file.rs  lib.rs
crates/warp-kms/: Cargo.toml
crates/warp-kms/src/: aws.rs  envelope.rs  error.rs  key.rs  lib.rs  local.rs
crates/warp-net/: Cargo.toml
crates/warp-net/src/: codec.rs  frames.rs  lib.rs  pool.rs  tls.rs  transport.rs
crates/warp-neural/: Cargo.toml
crates/warp-neural/src/: error.rs  header.rs  lib.rs
crates/warp-neural/src/compressor/: adaptive.rs  batch.rs  mod.rs  walloc.rs
crates/warp-neural/src/detection/: classifier.rs  mod.rs
crates/warp-neural/src/model/: mod.rs  presets.rs  session.rs
crates/warp-nfs/: Cargo.toml
crates/warp-nfs/src/: config.rs  error.rs  export.rs  lib.rs  server.rs
crates/warp-nfs/src/nfs4/: compound.rs  mod.rs  session.rs  state.rs
crates/warp-nfs/src/nfs4/ops/: mod.rs
crates/warp-nfs/src/pnfs/: mod.rs
crates/warp-nfs/src/rpc/: mod.rs  xdr.rs
crates/warp-oprf/: Cargo.toml
crates/warp-oprf/src/: error.rs  lib.rs  suite.rs
crates/warp-oprf/src/dedup/: client.rs  mod.rs  server.rs
crates/warp-oprf/src/opaque/: login.rs  mod.rs  registration.rs  server.rs
crates/warp-oprf/src/oprf/: client.rs  mod.rs  server.rs
crates/warp-oprf/src/private_kdf/: client.rs  mod.rs  server.rs
crates/warp-orch/: Cargo.toml
crates/warp-orch/benches/: pool.rs
crates/warp-orch/src/: adaptive_erasure.rs  download.rs  lib.rs  pool.rs  preposition.rs  progress.rs  striping.rs  upload.rs
crates/warp-orch/src/orchestrator/: mod.rs
crates/warp-orch/src/predict/: mod.rs
crates/warp-orch/tests/: stress.rs
crates/warp-smb/: Cargo.toml
crates/warp-smb/src/: config.rs  dfs.rs  error.rs  handler.rs  lib.rs  oplocks.rs  security.rs  server.rs  share.rs
crates/warp-smb/src/protocol/: mod.rs
crates/warp-store/: Cargo.toml
crates/warp-store-api/: Cargo.toml
crates/warp-store-api/src/: admin.rs  error.rs  lib.rs
crates/warp-store-api/src/auth/: iam_middleware.rs  mod.rs  s3_sig_v4.rs
crates/warp-store-api/src/native/: gpu_ops.rs  mod.rs  zk_ops.rs
crates/warp-store-api/src/s3/: acl.rs  cors.rs  mod.rs  policy.rs  tagging.rs  versioning.rs
crates/warp-store-api/tests/: integration.rs
crates/warp-store/benches/: storage.rs
crates/warp-store/src/: autotier.rs  bucket.rs  ephemeral.rs  error.rs  events.rs  key.rs  lib.rs  lifecycle.rs  object.rs  object_lock.rs  version.rs
crates/warp-store/src/backend/: chonkers.rs  gpu_direct.rs  local.rs  mod.rs  portal.rs
crates/warp-store/src/backend/nvmeof/: backend.rs  client.rs  error.rs  mapper.rs  mod.rs  pool.rs  transport.rs
crates/warp-store/src/collective/: mod.rs  rmpi_adapter.rs
crates/warp-store/src/consistency/: crdt_store.rs  types.rs
crates/warp-store/src/events/: aws.rs  mod.rs
crates/warp-store/src/healer/: queue.rs  worker.rs
crates/warp-store/src/replication/: mod.rs  shards.rs  wireguard.rs
crates/warp-store/src/slai/: engine.rs  predictor.rs
crates/warp-store/src/snapshot/: cow.rs
crates/warp-store/src/transport/: mod.rs  rdma.rs
crates/warp-store/tests/: arbiter_shuttle.rs  healer_loom.rs  reliability_integration.rs  scrub_shuttle.rs
memory-bank/: activeContext.md  progress.md
tests/: integration.rs
(+77 files in other folders)
