[workspace]
resolver = "2"
members = [
    "crates/warp-cli",
    "crates/warp-core",
    "crates/warp-format",
    "crates/warp-net",
    "crates/warp-compress",
    "crates/warp-hash",
    "crates/warp-crypto",
    "crates/warp-io",
    "crates/warp-gpu",
    "crates/warp-stream",
    "crates/portal-core",
    "crates/portal-hub",
    "crates/portal-net",
    "crates/warp-edge",
    "crates/warp-sched",
    "crates/warp-orch",
    "crates/warp-telemetry",
    "crates/warp-config",
    "crates/warp-api",
    "crates/warp-dashboard",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/warp"
homepage = "https://github.com/yourusername/warp"
documentation = "https://docs.rs/warp-core"
readme = "README.md"
keywords = ["transfer", "compression", "encryption", "merkle", "gpu"]
categories = ["command-line-utilities", "network-programming", "cryptography"]
authors = ["Your Name <your@email.com>"]

[workspace.dependencies]
# Internal crates
warp-core = { path = "crates/warp-core" }
warp-format = { path = "crates/warp-format" }
warp-net = { path = "crates/warp-net" }
warp-compress = { path = "crates/warp-compress" }
warp-hash = { path = "crates/warp-hash" }
warp-crypto = { path = "crates/warp-crypto" }
warp-io = { path = "crates/warp-io" }
warp-gpu = { path = "crates/warp-gpu" }
warp-stream = { path = "crates/warp-stream" }
portal-core = { path = "crates/portal-core" }
portal-hub = { path = "crates/portal-hub" }
portal-net = { path = "crates/portal-net" }
warp-edge = { path = "crates/warp-edge" }
warp-sched = { path = "crates/warp-sched" }
warp-orch = { path = "crates/warp-orch" }
warp-telemetry = { path = "crates/warp-telemetry" }
warp-config = { path = "crates/warp-config" }
warp-api = { path = "crates/warp-api" }
warp-dashboard = { path = "crates/warp-dashboard" }

# Async runtime
tokio = { version = "1.48", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }

# QUIC transport
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }

# Compression
zstd = "0.13"
lz4_flex = "0.11"

# Hashing
blake3 = { version = "1.8", features = ["rayon", "mmap"] }

# Cryptography
chacha20poly1305 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core", "serde"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
argon2 = "0.5"
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.3"

# Parallelism
rayon = "1.11"
dashmap = "6.1"

# CLI
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
indicatif = { version = "0.17", features = ["rayon"] }
console = "0.15"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Utilities
bytes = "1.7"
memmap2 = "0.9"
walkdir = "2.5"
tempfile = "3.14"
filetime = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5.0"

# GPU (optional) - cudarc 0.18+ uses CudaContext instead of CudaDevice
cudarc = { version = "0.18", default-features = false, features = ["driver", "nvrtc"] }

# Testing
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"
test-case = "3.3"

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
debug = true
