[workspace]
resolver = "2"
members = [
    "crates/warp-cli",
    "crates/warp-core",
    "crates/warp-format",
    "crates/warp-net",
    "crates/warp-compress",
    "crates/warp-hash",
    "crates/warp-crypto",
    "crates/warp-io",
    "crates/warp-gpu",
    "crates/warp-stream",
    "crates/warp-ec",
    "crates/warp-chonkers",
    "crates/warp-neural",
    "crates/portal-core",
    "crates/portal-hub",
    "crates/portal-net",
    "crates/warp-edge",
    "crates/warp-sched",
    "crates/warp-orch",
    "crates/warp-telemetry",
    "crates/warp-config",
    "crates/warp-api",
    "crates/warp-dashboard",
    "crates/warp-store",
    "crates/warp-store-api",
    "crates/warp-ipc",
    "crates/warp-iam",
    "crates/warp-kms",
    "crates/warp-oprf",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/warp"
homepage = "https://github.com/yourusername/warp"
documentation = "https://docs.rs/warp-core"
readme = "README.md"
keywords = ["transfer", "compression", "encryption", "merkle", "gpu"]
categories = ["command-line-utilities", "network-programming", "cryptography"]
authors = ["Your Name <your@email.com>"]

[workspace.dependencies]
# Internal crates
warp-core = { path = "crates/warp-core" }
warp-format = { path = "crates/warp-format" }
warp-net = { path = "crates/warp-net" }
warp-compress = { path = "crates/warp-compress" }
warp-hash = { path = "crates/warp-hash" }
warp-crypto = { path = "crates/warp-crypto" }
warp-io = { path = "crates/warp-io" }
warp-gpu = { path = "crates/warp-gpu" }
warp-stream = { path = "crates/warp-stream" }
warp-ec = { path = "crates/warp-ec" }
warp-chonkers = { path = "crates/warp-chonkers" }
portal-core = { path = "crates/portal-core" }
portal-hub = { path = "crates/portal-hub" }
portal-net = { path = "crates/portal-net" }
warp-edge = { path = "crates/warp-edge" }
warp-sched = { path = "crates/warp-sched" }
warp-orch = { path = "crates/warp-orch" }
warp-telemetry = { path = "crates/warp-telemetry" }
warp-config = { path = "crates/warp-config" }
warp-api = { path = "crates/warp-api" }
warp-dashboard = { path = "crates/warp-dashboard" }
warp-store = { path = "crates/warp-store" }
warp-store-api = { path = "crates/warp-store-api" }
warp-ipc = { path = "crates/warp-ipc" }
warp-iam = { path = "crates/warp-iam" }
warp-kms = { path = "crates/warp-kms" }
warp-oprf = { path = "crates/warp-oprf" }
warp-neural = { path = "crates/warp-neural" }

# Async runtime
tokio = { version = "1.48", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }
async-trait = "0.1"

# QUIC transport
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }

# Compression
zstd = "0.13"
lz4_flex = "0.11"

# Hashing
blake3 = { version = "1.8", features = ["rayon", "mmap"] }

# Cryptography
chacha20poly1305 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core", "serde"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
argon2 = "0.5"
rand = "0.8"
# Note: boringtun requires x25519-dalek 2.0.0-rc.3 which conflicts with stable 2.0.x
# WireGuard feature uses simulated tunnels until boringtun updates dependencies

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"

# Parallelism
rayon = "1.11"
dashmap = "6.1"
crossbeam-utils = "0.8"

# CLI
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
indicatif = { version = "0.17", features = ["rayon"] }
console = "0.15"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Utilities
bytes = "1.7"
memmap2 = "0.9"
walkdir = "2.5"
tempfile = "3.14"
filetime = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5.0"

# GPU (optional) - cudarc 0.18.2 uses CudaContext instead of CudaDevice
cudarc = { version = "0.18.2", default-features = false, features = ["driver", "nvrtc"] }

# Apple Metal GPU (optional) - objc2-metal is the modern replacement for deprecated metal-rs
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-metal = "0.3.2"
objc2-quartz-core = "0.3"

# Testing
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"
test-case = "3.3"

# Embedded databases
sled = "0.34"

# Neural compression / ML inference
ort = { version = "2.0.0-rc.10", default-features = false, features = ["std", "download-binaries"] }
ndarray = { version = "0.16", features = ["rayon"] }
shellexpand = "3.1"
parking_lot = "0.12"
once_cell = "1.19"

# Distributed consensus
openraft = { version = "0.9", features = ["serde", "storage-v2"] }

# HPC-AI integration
hpc-channels = { path = "../01-hpc-channels", features = ["rkyv-codec"] }
rmpi = { path = "../03-rmpi" }
slai = { path = "../04-slai", default-features = false }

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
debug = true
