[package]
name = "portal-net"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "P2P mesh networking for Portal distributed storage"

[dependencies]
# Internal crates
portal-core.workspace = true
warp-net = { workspace = true, features = ["insecure-tls"] }
warp-crypto.workspace = true

# mDNS discovery
mdns-sd = "0.11"

# Cryptography (X25519 for WireGuard keys)
x25519-dalek.workspace = true

# Async runtime
tokio.workspace = true
async-trait = "0.1"

# Serialization
serde.workspace = true
rmp-serde.workspace = true
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUIDs
uuid = { version = "1.11", features = ["v4", "serde"] }

# Utilities
bytes.workspace = true
dashmap.workspace = true
tracing.workspace = true
thiserror.workspace = true
hex = "0.4"
rand.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
tempfile.workspace = true
proptest.workspace = true
test-case.workspace = true

[features]
default = []

[lints]
workspace = true
