[package]
name = "warp-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "REST API with OpenAPI documentation for Warp"

[dependencies]
axum = "0.8"
utoipa = { version = "5", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
thiserror = { workspace = true }
tracing = { workspace = true }
warp-config = { workspace = true }
warp-telemetry = { workspace = true }
uuid = { version = "1.16", features = ["v4", "serde"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio-test = "0.4"
