[package]
name = "warp-block"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "NBD block device gateway for WARP storage with thin provisioning and COW snapshots"

[dependencies]
# WARP ecosystem
warp-store = { path = "../warp-store" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Concurrency
dashmap = { workspace = true }
parking_lot = { workspace = true }

# Serialization
serde = { workspace = true }
bytes = { workspace = true }

# Error handling
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = { workspace = true }
