[package]
name = "warp-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core orchestration for warp transfers"

[dependencies]
warp-format.workspace = true
warp-net = { workspace = true, features = ["insecure-tls"] }
warp-compress.workspace = true
warp-hash.workspace = true
warp-crypto.workspace = true
warp-io.workspace = true

tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
dashmap.workspace = true
bytes.workspace = true
serde = { workspace = true, features = ["derive"] }
rmp-serde.workspace = true
dirs.workspace = true
tempfile.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile.workspace = true
