[package]
name = "warp-kms"
version = "0.1.0"
edition = "2024"
description = "Key Management Service for warp storage encryption"
license = "Apache-2.0"

[features]
default = []
aws = ["aws-sdk-kms", "aws-config"]

[dependencies]
# Core
async-trait = "0.1"
thiserror = "2"
tracing = "0.1"

# Crypto
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
rand = "0.8"
sha2 = "0.10"
zeroize = { version = "1", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Unique IDs
uuid = { version = "1", features = ["v4"] }

# Optional AWS KMS
aws-sdk-kms = { version = "1", optional = true }
aws-config = { version = "1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
