[package]
name = "warp-net"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "QUIC transport and wire protocol for warp"

[features]
default = []
insecure-tls = []  # Enable insecure TLS for testing with self-signed certificates

[dependencies]
quinn.workspace = true
rustls.workspace = true
tokio.workspace = true
bytes.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
rmp-serde.workspace = true
rcgen = "0.13"
rustls-pemfile = "2.2"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
