[package]
name = "warp-orch"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Transfer orchestration for Portal distributed storage"

[dependencies]
# Internal crates
warp-sched.workspace = true
warp-edge.workspace = true
warp-hash.workspace = true
warp-net.workspace = true

# Async runtime
tokio = { workspace = true, features = ["time", "sync", "rt"] }

# Concurrency
dashmap.workspace = true
parking_lot = "0.12.5"
rayon.workspace = true

# Serialization
serde.workspace = true
rmp-serde.workspace = true

# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true

# Utilities
bytes.workspace = true

# Time handling
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
tempfile.workspace = true
proptest.workspace = true
test-case.workspace = true
serde_json = "1.0.145"
criterion.workspace = true

[[bench]]
name = "pool"
harness = false

[lints]
workspace = true
