[package]
name = "warp-store-api"
description = "HTTP API server for warp-store with S3 compatibility"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
portal = ["warp-store/portal"]
# S3 Select support - enables SQL queries on objects
s3-select = ["sqlparser", "csv", "arrow2", "regex"]
# GPU acceleration - enables GPU hashing, encryption, and direct storage
gpu = ["warp-gpu", "warp-store/gpu"]
# ZK proofs - enables zero-knowledge proof generation and verification
zk = []
# IAM integration - enables OIDC, LDAP, and policy-based access control
iam = ["warp-iam"]

[dependencies]
# Core
warp-store = { workspace = true }
warp-iam = { workspace = true, optional = true }

# GPU acceleration (optional)
warp-gpu = { workspace = true, optional = true }

# S3 Select (optional)
sqlparser = { version = "0.53", optional = true }
csv = { version = "1.3", optional = true }
arrow2 = { version = "0.18", features = ["io_parquet", "io_csv", "io_json"], optional = true }
regex = { version = "1.11", optional = true }

# Web framework
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }
hyper = { version = "1.4", features = ["server", "http1", "http2"] }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = "1.0"

# Cryptography for S3 signature
hmac = "0.12"
sha2 = "0.10"

# Cryptography for GPU/ZK operations
blake3 = { workspace = true }
getrandom = "0.2"
chacha20poly1305 = "0.10"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = { workspace = true }

# Utilities
bytes = { workspace = true }
tracing = { workspace = true }
hex = "0.4"
percent-encoding = "2.3"
dashmap = { workspace = true }
uuid = { version = "1.11", features = ["v4"] }
quick-xml = { version = "0.37", features = ["serialize"] }
base64 = "0.22"
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
reqwest = { version = "0.12", features = ["json"] }
tempfile = { workspace = true }
serde_json = "1.0"
axum = "0.8"
